test/tettris-marketplace/tettris-marketplace-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: tettris-marketplace
  project: tettris
spec:
  selector:
    app: tettris-marketplace
  ports:
    - protocol: TCP
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tettris-marketplace-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`marketplace.cetaf.org`)
      kind: Rule
      services:
        - name: tettris-marketplace
          namespace: default
          port: 3000
